# bench-queues

./: CMakeLists.txt  README.md
include/: atomicops.h  boost_queue.h  boost_queue_static.h  boost_queue_static_batched.h  cameron_queue.h  circularfifo.h  circularfifo_queue.h  folly.h  optionparser.h  utilities.h
results/haswell/csv/: results-double.csv  results-pair.csv  results-v1.csv
results/phi/csv/: pair2.csv  results-doubble.csv  results-pair.csv  results-v1.csv
scripts/: extract-throughput.py  plot_simple.py  scan_haswell.py  scan_phi.py
tests/: boost-dynamic-pop.cpp  boost-dynamic-push.cpp  boost-dynamic.cpp  boost-static-batched-pop.cpp  boost-static-batched-push.cpp  boost-static-batched.cpp  boost-static-pop.cpp  boost-static-push.cpp  boost-static.cpp  cameron-pop.cpp  cameron-push.cpp  cameron.cpp  circularfifo-pop.cpp  circularfifo-push.cpp  circularfifo.cpp  folly-pop.cpp  folly-push.cpp  folly.cpp
